# circuit-static-description

./: README.md  pyproject.toml
circuit_static_description/: __init__.py  circuit.py
tests/: benchmark.py  test_circuit.py
