[tool.poetry]
name = "circuit-static-description"
version = "0.1.0"
description = "A boolean gate circuit description package for saving, loading, and evaluating logic circuits."
authors = ["GGN_2015 <neko@jlulug.org>"]
readme = "README.md"
license = "MIT"
keywords = ["circuit", "boolean", "logic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11 || ^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
